[package]
name = "r-token"
version = "0.1.2"
authors = ["Kayano <Kayano04@outlook.jp>"]
description = "A simple and efficient token generation library for Rust, ideal for API authentication and session management."
license = "MIT"
repository = "https://github.com/KayanoLiam/r-token.git"
readme = "README.md"
keywords = ["token", "uuid", "api", "web"]
categories = ["api-bindings", "development-tools", "network-programming"]
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
actix-web = { version = "4", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
# 定义一个叫 "actix" 的开关，开启它就会下载 actix-web 依赖
actix = ["dep:actix-web"]
default = ["actix"] # 开发方便，默认开启
