[package]
name = "r-token"
version = "1.0.0"
authors = ["Kayano <Kayano04@outlook.jp>"]
description = "A simple and efficient token generation library for Rust, ideal for API authentication and session management."
license = "MIT"
documentation = "https://docs.rs/r-token"
homepage = "https://github.com/KayanoLiam/r-token"
repository = "https://github.com/KayanoLiam/r-token.git"
readme = "README.md"
keywords = ["token", "uuid", "api", "web"]
categories = ["api-bindings", "development-tools", "network-programming"]
edition = "2024"
rust-version = "1.85"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
actix-web = { version = "4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = "0.4.42"
redis = { version = "1.0.2", optional = true, features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", optional = true, features = ["sync"] }

[features]
# 定义一个叫 "actix" 的开关，开启它就会下载 actix-web 依赖
actix = ["dep:actix-web"]
default = ["actix"] # 开发方便，默认开启
redis = ["dep:redis","dep:tokio"]
redis-actix = ["redis", "actix"]
rbac = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "r-token"
path = "src/main.rs"
required-features = ["actix"]

[[bin]]
name = "r-token-redis"
path = "src/bin/redis_main.rs"
required-features = ["redis-actix"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
